--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     </div>
     <div class="row">
       <div class="col-md-2">
-        <div class="well">
+        <div class="well" style="background-color: #80c2ff">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="selDataset" onchange="optionChanged(this.value)">
+          </select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
